<resources>
    <string name="sensor_upload_url">https://app2.cbits.northwestern.edu/prImporter</string>
    <string name="json_config_url">http://mohrlab.northwestern.edu/robot/</string>
    <string name="app_name">Purple Robot</string>
    <string name="widget_title">Purple Robot Standard Widget</string>
    <string name="wide_widget_title">Purple Robot Widescreen Widget</string>
    <string name="toast_incorrect_password">Incorrect password. Please try again.</string>
    <string name="title_preference_triggers_screen">Trigger Configuration</string>
    <string name="title_preference_triggers_category">Available Triggers</string>
    <string name="title_enable_model">Enable Model</string>
    <string name="label_unknown_context">Unknown Context</string>
    <string name="menu_label_label">Add label</string>
    <string name="title_label_probe">Most Recent Label</string>
    <string name="title_snapshots">Snapshots</string>
    <string name="menu_snapshot_label">Snapshots</string>
    <string name="title_take_snapshot">Take snapshot</string>
    <string name="snapshot_user_initiated">User Initiated</string>
    <string name="snapshot_desc">%1$s (%2$d probes)</string>
    <string name="snapshot_single_desc">%1$s (1 probe)</string>
    <string name="snapshot_probe_count">%1$d probes</string>
    <string name="label_trigger_fire_now">Fire now</string>
    <string name="label_trigger_fire_now_desc">Execute trigger\'s action immediately</string>
    <string name="label_trigger_show_action">Inspect action</string>
    <string name="label_trigger_show_action_desc">Display the source code of the trigger\'s action</string>
    <string name="label_trigger_enable_action">Enable trigger</string>
    <string name="label_trigger_enable_action_desc">Disable trigger to skip future firings.</string>
    <string name="config_probes_category_label">Probes</string>
    <string name="config_triggers_category_label">Triggers</string>
    <string name="config_models_category_label">Learned Models</string>
	<string name="type_trigger_unknown">Unknown Trigger</string>
	<string name="type_trigger_probe">Probe Trigger</string>
	<string name="type_trigger_datetime">Time-Based Trigger</string>
	<string name="label_trigger_last_fire">Last Fired</string>
	<string name="label_trigger_last_fire_never">Never</string>
	<string name="label_trigger_upcoming_fires">Upcoming Firings</string>
	<string name="label_trigger_upcoming_fires_none">No upcoming firings.</string>
	<string name="label_trigger_upcoming_fires_summary">%1$d scheduled firings</string>
	<string name="label_trigger_upcoming_fire_summary">1 scheduled firing</string>
    <string name="error_malformed_request">Malformed request. Please try again.</string>
    <string name="error_empty_payload">No payload to transmit.</string>
    <string name="activity_diagnostic_title">Diagnostics</string>
    <string name="user_id_label">User Identifier</string>
    <string name="user_id_placeholder">Unknown</string>
    <string name="ip_address_label">IP Address</string>
    <string name="ip_address_placeholder">Unknown</string>
    <string name="probe_status_label">Probe &amp; Sensor Status</string>
    <string name="probe_status_placeholder">Unknown</string>
    <string name="upload_status_label">HTTP Transmission Status</string>
    <string name="upload_status_placeholder">Unknown</string>
    <string name="last_upload_label">Most Recent Transmission</string>
    <string name="last_upload_placeholder">Unknown</string>
    <string name="email_diagnostic_subject">Purple Robot Diagnostic Settings</string>
    <string name="display_satellites_title">Satellites (%1$d)</string>
    <string name="display_satellite_label">Satellite %1$d</string>
    <string name="display_satellites_signal_ratio">Average Signal-to-Noise Ratio</string>
    <string name="display_satellite_id_label">Satellite Identifier</string>
    <string name="display_satellite_elevation_label">Elevation (degrees)</string>
    <string name="display_satellite_azimuth_label">Azimuth (degrees)</string>
    <string name="display_satellite_signal_label">Signal-to-Noise Ratio</string>
    <string name="display_satellite_ephemeris_label">Uses Ephemeris Data</string>
    <string name="display_satellite_no_ephemeris">False</string>
    <string name="display_satellite_has_ephemeris">True</string>
    <string name="display_satellite_almanac_label">Uses Almanac Data</string>
    <string name="display_satellite_no_almanac">False</string>
    <string name="display_satellite_has_almanac">True</string>
    <string name="display_location_coordinates_label">Coordinates (Latitude, Longitude)</string>
    <string name="display_location_coordinates">%1$f, %2$f</string>
    <string name="display_location_altitude_label">Altitude (Meters Above Sea Level))</string>
    <string name="display_location_accuracy_label">Accuracy (Meters)</string>
    <string name="display_location_bearing_label">Bearing (Degrees)</string>
    <string name="display_location_speed_label">Speed (Meters per Second)</string>
    <string name="display_location_provider_label">Location Provider</string>
    <string name="probe_status_enabled">Sensors &amp; probes enabled and collecting readings&#8230;</string>
    <string name="probe_status_disabled">Sensors &amp; probes disabled.</string>
    <string name="upload_status_enabled_wifi_only">Transmissions enabled when Wi-Fi is present.</string>
    <string name="upload_status_enabled">Transmissions enabled.</string>
    <string name="upload_status_disabled">Transmissions disabled.</string>
    <string name="last_upload_format">%1$s (%2$d KB)</string>
    <string name="menu_email_label">E-Mail Diagnostics</string>
    <string name="config_settings_category">Configuration Options</string>
    <string name="config_notifications_category">Notification Options</string>
    <string name="config_application_category">Application Options</string>
    <string name="config_hockey_update">Check for Updates on Launch</string>
    <string name="summary_hockey_update">Query any third-party update services (HockeyApp) for application updates &amp; bug fixes.</string>
    <string name="message_update_check">This change will take effect the next time this application restarts.</string>
    <string name="config_probe_communication_hash_title">Obfuscate Call Details</string>
    <string name="config_probe_communication_hash_summary">When set, the app will hash the name and phone numbers observed when collecting that data.</string>
    <string name="config_probe_communication_retrieve_title">Retrieve Message Contents</string>
    <string name="config_probe_communication_retrieve_summary">Transmits message text with event metadata.</string>
    <string name="config_probe_communication_retrieve_warning_title">Privacy Warning</string>
    <string name="config_probe_communication_retrieve_warning">Setting this option to true will transmit the contents of outgoing messages (sent from this device) to the server automatically. This option should only be enabled under extremely rigorous oversight by an authorized privacy official or institutional review board.</string>
    <string name="config_probe_communication_encrypt_title">Encrypt Message Contents</string>
    <string name="config_probe_communication_encrypt_summary">Encrypts any transmitted message contents before sending to the server.</string>
    <string name="config_probe_bluetooth_hash_title">Obfuscate Device Details</string>
    <string name="config_probe_bluetooth_hash_summary">When set, the app will hash the caller\'s name and phone number when collecting that data.</string>
    <string name="config_http_upload_interval_label">HTTP Upload Interval</string>
    <string name="config_http_upload_interval_summary">Override the default upload intervals with a constant interval.</string>
    <string name="config_streaming_jackson_upload_interval_label">JSON Upload Interval</string>
    <string name="config_streaming_jackson_upload_interval_summary">Interval to pause between upload sessions.</string>
    <string name="config_http_upload_size_label">HTTP Upload Size</string>
    <string name="config_http_upload_size_summary">Override the default upload payload size with a constant size.</string>
    <string name="config_streaming_jackson_upload_size_label">JSON Minimum Upload Size</string>
    <string name="config_json_url_label">Configuration URL</string>
    <string name="config_json_url_message">Please enter the URL for the application configuration file.</string>
    <string name="config_refresh_json_label">Refresh Configuration</string>
    <string name="config_reset_label">Reset Configuration</string>
    <string name="config_reset_summary">Clears ALL configuration settings and returns Purple Robot to it\'s original state.</string>
    <string name="title_clear_configuration">Clear configuration?</string>
    <string name="message_clear_configuration">Are you sure you want to clear the configuration? This will remove ALL settings, triggers, snapshots, and device readings.</string>
    <string name="button_clear_yes">Yes</string>
    <string name="button_clear_no">No</string>
    <string name="button_continue">Continue</string>
    <string name="config_vibrator_pattern_label">Haptic Feedback Pattern</string>
    <string name="config_vibrator_pattern_message">Default pattern used to provide haptic feedback (vibrations) for events.</string>
    <string name="config_notification_sound_label">Notification Sound</string>
    <string name="config_notification_sound_summary">System sound used for audible notifications when not otherwise specified.</string>
    <string name="config_password_label">Configuration Password</string>
    <string name="config_password_title">Configuration Password</string>
    <string name="config_password_message">Please enter the password required to configure this launcher.</string>
    <string name="config_user_id_label">User Identifier</string>
    <string name="config_user_id_title">User Identifier</string>
    <string name="config_user_id_message">Unique identifier used to associate your data with your online profile.</string>
    <string name="config_network_category">Network Options</string>
    <string name="config_show_background">Enable Background Image</string>
    <string name="summary_show_background">When probes are disabled, specifies whether to display the default placeholder image or to leave the area empty.</string>
    <string name="config_mute_warnings">Mute Status Notifications</string>
    <string name="summary_mute_warnings">Do not display sanity check notifications.</string>
    <string name="error_json_set_uri_password">Unable to automatically set configuration from the web while the password is set.</string>
    <string name="success_json_set_uri">Successfully configured via the web.</string>
    <string name="text_startup_password_hint">Password</string>
    <string name="ical_template">BEGIN:VCALENDAR\nVERSION:2.0\nPRODID:-//CBITs/Purple Robot Manager//NONSGML v1.0//EN\nBEGIN:VEVENT\nUID:%1$s@cbits.northwestern.edu\nDTSTAMP:%1$s\nDTSTART:%1$s\nDTEND:%2$s\nSUMMARY:%3$s%4$s\nEND:VEVENT\nEND:VCALENDAR</string>
    <string name="widget_test_title">This is an intentionally long string created to see if the widget will truncate the title.</string>
    <string name="config_json_refresh_interval_label">Refresh Interval</string>
    <string name="config_json_refresh_interval_message">How often configuration should be refreshed from the server.</string>
    <string name="title_preference_probes_enable_probes">Enable Probes</string>
</resources>